<resources>

    <string name="app_name">Mano</string>
    <string name="esqueci">Esqueceu sua senha?</string>
    <string name="textEsqueciSenha">Insira o e-mail que foi cadastrado e enviaremos um email com o link para você criar uma nova senha.</string>
    <string name="textBemVindo">Parabéns por se cadastrar no aplicativo, seja bem vindo.</string>
    <string name="cadastroRealizado">Cadastro realizado com sucesso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content">Imagem de dois gatos em cima da palavra welcome</string>
    <string name="continuar">Continuar</string>
    <string name="email">Email</string>
    <string name="nome_completo">Nome completo</string>
    <string name="cadastro">Cadastro</string>
    <string name="senha">Senha</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <string name="fa_a_login">Faça Login</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_tem_conta">Não tem conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="fa_a_seu_login">Faça seu login</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="pix">eSo5?s%GvBgxV=svW!0NrL?KTh!+[+T}ZyMLG@KJ06MqLz1ifw[$aWqr_haoAF+O9Z=vpVa2BiM4@wTs4X8;vCBT4aX=(z6:gnNF8s7%C</string>
    <string name="copiecole"> Copie o codigo abaixo e insira-o no seu Banco online de sua preferência </string>
    <string name="dialogMessage">Deseja sair?</string>
    <string name="sair">Sair</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="deletar_conta">Deletar Conta</string>

    <string name="info_deletar">Ao deletar a sua conta, todos os seus dados serão apagados, incluido suas publicações. Essa ação não poderá ser desfeita. \n \nDeseja continuar? </string>
    <string name="info">ESTA AÇÃO IRÁ DELETAR A SUA CONTA</string>

    <string name="deletar">Deseja realmente deletar a sua conta?</string>

    <string name="pagamento">Pagamento realizado com sucesso!</string>
    <string name="pag">Pagamento</string>

    <string name="telefone">Telefone</string>

</resources>