<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/roxo_claro"
    tools:context=".Cadastro">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/btnCamera"
        android:layout_width="204dp"
        android:layout_height="178dp"
        android:layout_marginTop="28dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/componentes_entrada"
        style="@style/container"
        android:layout_width="436dp"
        android:layout_height="504dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cadastro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/componentes_entrada" />

    <EditText
        android:id="@+id/editNomeC"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_usuario"
        android:hint="@string/nome_completo"
        android:autofillHints="name"
        android:drawablePadding="7dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCadastro" />

    <EditText
        android:id="@+id/editEmailC"
        style="@style/edit_text"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:layout_width="match_parent"
        android:drawablePadding="7dp"
        android:autofillHints="emailAddress"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editSenhaC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeC"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editSenhaC"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/senha"
        android:autofillHints="password"
        android:drawablePadding="7dp"
        android:drawableEnd="@drawable/ic_nao_visivel"
        android:drawableStart="@drawable/ic_cadeado"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailC" />


    <Button
        android:id="@+id/btnCriarConta"
        style="@style/botao"
        android:layout_width="322dp"
        android:layout_height="0dp"
        android:layout_marginBottom="96dp"
        android:text="@string/criar_conta"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/componentes_entrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="36dp"
        android:text="@string/j_tem_uma_conta"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_login"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="36dp"
        android:text="@string/fa_a_login"
        android:textColor="#1C18D9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>